# gelatin

./: stack.yaml
gelatin/: gelatin.cabal
gelatin-example/: gelatin-example.cabal
gelatin-freetype2/: gelatin-freetype2.cabal
gelatin-freetype2/src/Gelatin/FreeType2/: Internal.hs  Utils.hs
gelatin-fruity/: gelatin-fruity.cabal
gelatin-gl/: gelatin-gl.cabal
gelatin-glfw/: gelatin-glfw.cabal
gelatin-sdl2/: gelatin-sdl2.cabal
gelatin-sdl2/src/Gelatin/: SDL2.hs
gelatin-shaders/: gelatin-shaders.cabal
gelatin-webgl/: gelatin-webgl.cabal
