name:                gelatin-gl
version:             0.1.0.0
synopsis:            OpenGL rendering routines for the gelatin-picture graphics
                     EDSL.
description:         This package provides most of a backend to
                     gelatin-picture, a DSL for decribing two dimensional
                     pictures.
homepage:            https://github.com/schell/gelatin/gelatin-gl
license:             MIT
license-file:        LICENSE
author:              Schell Scivally
maintainer:          schell.scivally@synapsegroup.com
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10
stability:           experimental

library
  ghc-options:         -Wall
  exposed-modules:     Gelatin.GL,
                       Gelatin.GL.Renderer,
                       Gelatin.GL.Compiler,
                       Gelatin.GL.Shader,
                       Gelatin.GL.Common,
                       Gelatin.GL.TH
  build-depends:       base >=4.8 && < 4.15
                     , bytestring          >=0.10 && <0.11
                     , containers          >=0.5 && <0.7
                     , directory           >=1.2 && <1.4
                     , filepath            >=1.4 && <1.5
                     , gelatin             >=0.1 && <0.2
                     , gelatin-shaders     >=0.1 && <0.2
                     , gl                  >=0.7 && <=0.9
                     , JuicyPixels         >=3.2 && <3.4
                     , lens                >=4.14 && <4.20
                     , linear              >=1.20 && <1.22
                     , mtl                 >=2.2 && <2.3
                     , transformers        >=0.4 && <0.6
                     , template-haskell    >=2.10 && <2.17
                     , vector              >=0.12 && <0.13

  hs-source-dirs:      src
  default-language:    Haskell2010

executable gelatin-gl-example
  ghc-options:         -Wall

  build-depends:       base >=4.8 && < 4.15
                     , gelatin             >=0.1  && <0.2
                     , gelatin-gl
                     , linear              >=1.20 && <1.22
                     , lens                >=4.14 && <4.20
                     , mtl                 >=2.2  && <2.3
                     , vector              >=0.12 && <0.13

  hs-source-dirs:      app
  main-is:             Example.hs
  default-language:    Haskell2010
